chore(tooling): configure project development tooling and workflows
- Add Husky git hooks for pre-commit and commit-msg validation
- Configure Commitlint for enforcing conventional commit standards
- Implement Biome for linting and code formatting
- Set up Jest testing infrastructure
- Add Commitizen for standardized commit message creation

Improves developer experience and code quality management

--- a/package.json
+++ b/package.json
@@ -2,13 +2,7 @@
   "name": "snhu_cs-465",
   "version": "1.0.0",
   "description": "SNHU CS-465 Full Stack Web Development",
-  "keywords": [
-    "snhu",
-    "cs-465",
-    "full-stack",
-    "web-development",
-    "typescript"
-  ],
+  "keywords": ["snhu", "cs-465", "full-stack", "web-development", "typescript"],
   "author": {
     "name": "Brett Plemons",
     "url": "https://github.com/brettplemons",
@@ -17,19 +11,40 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "changeset": "changeset",
     "changeset version": "changeset version",
     "changeset publish": "changeset publish",
-    "ci:publish": "pnpm publish -r"
+    "ci:publish": "pnpm publish -r",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "biome check .",
+    "lint:fix": "biome check . --write",
+    "format": "biome format .",
+    "format:fix": "biome format . --write",
+    "prepare": "node .husky/install.mjs",
+    "commit": "cz"
   },
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
+  },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@changesets/cli": "^2.29.3",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/cz-commitlint": "^19.8.1",
     "@commitlint/types": "^19.8.1",
-    "conventional-changelog-atom": "^5.0.0"
+    "@types/jest": "^29.5.14",
+    "commitizen": "^4.3.1",
+    "conventional-changelog-atom": "^5.0.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
+    "tsx": "^4.19.4"
   }
 }
