ci: enhance development workflow and project configuration
- feat: update pre-commit hook to auto-fix lint issues
- chore: configure Biome to include more file types
- feat: add server-related npm scripts for development
- style: improve HTML formatting across static files
- refactor: add ES Module compatibility for server code

--- a/biome.json
+++ b/biome.json
@@ -8,6 +8,15 @@
   },
   "files": {
     "ignoreUnknown": false,
+    "include": [
+      "**/*.ts",
+      "**/*.tsx",
+      "**/*.js",
+      "**/*.jsx",
+      "**/*.json",
+      "server/**/*.ts",
+      "server/**/*.js"
+    ],
     "ignore": [
       "**/*.css",
       "**/node_modules/**",
