--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,2 @@
-packages:
-  # Include shared packages
-  - 'packages/*'
-  # Include server package
-  - 'server'
+onlyBuiltDependencies:
+  - core-js
