--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "lint": "biome check .",
-    "lint:fix": "biome check --write ."
+    "lint:fix": "biome check --write .",
+    "seed": "node app_server/models/seed.js"
   },
   "keywords": [
     "snhu",
@@ -28,9 +29,11 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "debug": "^4.4.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
     "http-errors": "^2.0.0",
+    "mongoose": "^8.15.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
