--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon app.js",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
-    "seed": "node app_server/models/seed.js"
+    "seed": "node app_api/models/seed.js"
   },
   "keywords": [
     "snhu",
@@ -25,7 +25,7 @@
     "url": "https://github.com/PlemonsBrett"
   },
   "license": "Unlicense",
-  "packageManager": "pnpm@10.11.0",
+  "packageManager": "pnpm@10.12.1",
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "debug": "^4.4.1",
