feat(auth): implement JWT authentication with login and registration endpoints, add user model and authentication service, and integrate with Angular frontend

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DB_NAME=travlr
 # Application Configuration
 PORT=3000
 NODE_ENV=development
+
+# JWT Configuration
+JWT_SECRET=S0uth3rnN3wH@mpsh1r3Un1v3rs1tyC0mput3rSc13nc3
