--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "express-jwt": "8.5.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "9.0.2",
     "mongoose": "^8.15.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "0.7.0",
+    "passport-local": "1.0.0"
   },
   "devDependencies": {
     "biome": "^0.3.3",
