fix(auth): update JWT_SECRET in .env.example, enhance error handling for authentication in app.js, and improve user input validation in registration and login endpoints

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ PORT=3000
 NODE_ENV=development
 
 # JWT Configuration
-JWT_SECRET=S0uth3rnN3wH@mpsh1r3Un1v3rs1tyC0mput3rSc13nc3
+JWT_SECRET=your-super-secret-jwt-key-here
