Refactor README.md for clarity and structure; update pnpm workspace configuration; remove obsolete SonarCloud configuration file.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,11 @@
 packages:
-  - 'app_admin'
-  - 'app_api'
-  - 'app_server'
+  - app_admin
+  - app_api
+  - app_server
 
 onlyBuiltDependencies:
+  - '@parcel/watcher'
   - core-js
+  - esbuild
+  - lmdb
+  - msgpackr-extract
